--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     var sapforum = new sapForumApp();
     sapforum.run();
     appScan.initialize();
-    /*appNotify.initialize();
+    appNotify.initialize();
 
 </script>
 
