--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link href="jquery-mobile/jquery.mobile-1.3.1.min.css" rel="stylesheet" type="text/css" />
     <!-- uncoment viewport meta tag, if targeting Android 4.x.x devices -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <script src="phonegap.js" type="text/javascript"></script>
+    <script src="scripts/PushNotification.js" type="text/javascript" ></script>
     <script src="cordova.js" type="text/javascript"></script>
     <script src="jquery-mobile/jquery.min.js" type="text/javascript"></script>
     <script src="jquery-mobile/jquery.mobile-1.3.1.min.js" type="text/javascript"></script>
