--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link href="jquery-mobile/jquery.mobile-1.3.1.min.css" rel="stylesheet" type="text/css" />
     <!-- uncoment viewport meta tag, if targeting Android 4.x.x devices -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-    <script src="phonegap.js" type="text/javascript"></script>
-    <script src="scripts/PushNotification.js" type="text/javascript" ></script>
     <script src="cordova.js" type="text/javascript"></script>
+    <script src="barcodescanner.js" type="text/javascript"></script>
+    <script src="childbrowser.js" type="text/javascript"></script>
+    <script src="PushNotification.js" type="text/javascript" ></script>
     <script src="jquery-mobile/jquery.min.js" type="text/javascript"></script>
     <script src="jquery-mobile/jquery.mobile-1.3.1.min.js" type="text/javascript"></script>
     <script src="scripts/airlinedata.js" type="text/javascript"></script>
@@ -17,7 +18,6 @@
     <script src="scripts/scancode.js" type="text/javascript"></script>
     <script src="scripts/notification.js" type="text/javascript"></script>
     <script src="scripts/OAuthSimple.js" type="text/javascript"></script>
-    <script src="scripts/childbrowser.js" type="text/javascript"></script>
     <!--<script type="text/javascript" src="http://platform.linkedin.com/in.js">
         api_key: 75tqfpco6w6mo0
         authorize: true
