--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- uncoment viewport meta tag, if targeting Android 4.x.x devices -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <script src="cordova.js" type="text/javascript"></script>
-    <script src="phonegap.js" type="text/javascript"></script>
+    <!--<script src="phonegap.js" type="text/javascript"></script>-->
     <script src="barcodescanner.js" type="text/javascript"></script>
     <script src="childbrowser.js" type="text/javascript"></script>
     <script src="PushNotification.js" type="text/javascript" ></script>
@@ -93,6 +93,7 @@
         <div id="deviceready" class="blink">
             <p class="event listening">Connecting to Device</p>
             <p class="event received">Device is Ready</p>
+            <p class="event notifyreceived">Notify is Ready</p>
         </div>
         <p><a href="#" class="topcoat-button" id="scan" data-icon="star" data-theme="e">SCAN</a></p>
         <p><a href="#" class="topcoat-button" id="encode" data-icon="star" data-theme="e">ENCODE</a></p>
