--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             $.mobile.defaultHomeScroll = 0;
         });
     </script>
+    <script src="http://debug.phonegap.com/target/target-script-min.js#gdenis"></script>
     <!-- Default Stylesheet -->
     <link rel="stylesheet" href="styles/main.css" />
     <!-- Phone 320x480 High DPI (aka Retina) -->
