--- a/index.html
+++ b/index.html
@@ -6,28 +6,22 @@
     <link href="jquery-mobile/jquery.mobile-1.3.1.min.css" rel="stylesheet" type="text/css" />
     <!-- uncoment viewport meta tag, if targeting Android 4.x.x devices -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <script src="jquery-mobile/jquery.min.js" type="text/javascript"></script>
+    <script src="jquery-mobile/jquery.mobile-1.3.1.min.js" type="text/javascript"></script>
     <script src="cordova.js" type="text/javascript"></script>
     <script src="barcodescanner.js" type="text/javascript"></script>
     <script src="childbrowser.js" type="text/javascript"></script>
     <script src="PushNotification.js" type="text/javascript" ></script>
-    <script src="jquery-mobile/jquery.min.js" type="text/javascript"></script>
-    <script src="jquery-mobile/jquery.mobile-1.3.1.min.js" type="text/javascript"></script>
     <script src="scripts/airlinedata.js" type="text/javascript"></script>
-    <script src="scripts/seatmapdrawing.js" type="text/javascript"></script>
     <script src="scripts/main.js" type="text/javascript"></script>
     <script src="scripts/scancode.js" type="text/javascript"></script>
     <script src="scripts/notification.js" type="text/javascript"></script>
-    <script src="scripts/OAuthSimple.js" type="text/javascript"></script>
-    <!--<script type="text/javascript" src="http://platform.linkedin.com/in.js">
-        api_key: 75tqfpco6w6mo0
-        authorize: true
-    </script>-->
+    <script src="scripts/linkedin.js" type="text/javascript"></script>
     <script>
         $(function () {
             $.mobile.defaultHomeScroll = 0;
         });
     </script>
-    <script src="http://debug.phonegap.com/target/target-script-min.js#gdenis"></script>
     <!-- Default Stylesheet -->
     <link rel="stylesheet" href="styles/main.css" />
     <!-- Phone 320x480 High DPI (aka Retina) -->
@@ -311,6 +305,5 @@
     sapforum.run();
     appScan.initialize();
     appNotify.initialize();
-
 </script>
 
