--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title></title>
@@ -16,7 +16,6 @@
     <script src="scripts/main.js" type="text/javascript"></script>
     <script src="scripts/scancode.js" type="text/javascript"></script>
     <script src="scripts/notification.js" type="text/javascript"></script>
-    <script src="scripts/linkedin.js" type="text/javascript"></script>
     <script>
         $(function () {
             $.mobile.defaultHomeScroll = 0;
@@ -44,7 +43,7 @@
     <!-- home page -->
     <div id="home" data-role="page" data-mini="true">
         <div data-role="header" data-position="fixed" data-tap-toggle="false">
-            <h1>Ola <span id="ffname"></span>!</h1>
+            <h1>Olá <span id="ffname"></span>!</h1>
         </div>
         <div class="info-wrapper">
             <div class="info-wrapper-left">
@@ -53,28 +52,23 @@
 
             <div class="info-wrapper-right">
                 <div class="info">
-                    <div class="info-data" id="ffnum"></div>
-                    <div class="info-label" for="ffnum">Ice Miles:</div>
+                    <div class="info-data" id="labelpointsTotal"></div>
+                    <div class="info-label" for="labelpointsTotal">Pontos:</div>
                     <div class="clear"></div>
                 </div>
                 <div class="info">
-                    <div class="info-data" id="miles"></div>
-                    <div class="info-label" for="miles">Total Miles:</div>
-                    <div class="clear"></div>
-                </div>
-                <div class="info">
-                    <div class="info-data" id="currentStatus">&nbsp;</div>
-                    <div class="info-label" for="currentStatus">Priority:</div>
+                    <div class="info-data" id="bestStand"></div>
+                    <div class="info-label" for="bestStand">Melhor Stand:</div>
                     <div class="clear"></div>
                 </div>
             </div>
             <div class="clear"></div>
         </div>
-
         <div data-role="content">
-            <ul data-role="listview" id="myTripsView" data-inset="true" data-theme="d">
+            <!--<ul data-role="listview" id="myTripsView" data-inset="true" data-theme="d">
                 <li>
-                    <a href="#myTrips" data-transition="slide">MyTrips <span id="numberOfFlights"></span>
+                    <a href="#myTrips" data-transition="slide">
+                        MyTrips <span id="numberOfFlights"></span>
                     </a>
                 </li>
             </ul>
@@ -82,224 +76,122 @@
                 <li>
                     <a href="#flightStatus" data-transition="slide">Flight Status</a>
                 </li>
-            </ul>
+            </ul>-->
         </div>
         <div id="deviceready" class="blink">
             <p class="event listening">Connecting to Device</p>
             <p class="event received">Device is Ready</p>
             <p class="event notifyreceived">Notify is Ready</p>
         </div>
-        <p><a href="#" class="topcoat-button" id="scan" data-icon="star" data-theme="e">SCAN</a></p>
-        <p><a href="#" class="topcoat-button" id="encode" data-icon="star" data-theme="e">ENCODE</a></p>
+        <p><a href="#" class="topcoat-button" id="points" data-icon="star" data-theme="e">Meus Pontos</a></p>
+        <p><a href="#" class="topcoat-button" id="scan" data-icon="star" data-theme="e">Marcar Pontos</a></p>
+        <p><a href="#" class="topcoat-button" id="infosession" data-icon="star" data-theme="e">Palestra</a></p>
+        <p><a href="#" class="topcoat-button" id="agenda" data-icon="star" data-theme="e">Agende uma visita</a></p>
+        <p><a href="#" class="topcoat-button" id="lulu" data-icon="star" data-theme="e">Stand Lulu</a></p>
+        <!--<p><a href="#" class="topcoat-button" id="encode" data-icon="star" data-theme="e">ENCODE</a></p>-->
         <p id="info"></p>
     </div>
 
-    <!-- seatPicker page -->
-    <div id="seatPicker" data-role="page">
-        <div data-role="header" data-position="fixed" data-tap-toggle="false">
-            <h1>Pick a seat</h1>
-            <a href="#checkIn" data-role="button" id="backButton" data-transition="flip" class="ui-btn-right" data-rel="back">Done</a>
-        </div>
-        <div data-role="content">
-            <div id="seatMapPickerContainer"></div>
-        </div>
-    </div>
-
     <!-- logon page -->
-    <div id="logon" data-role="page">
+    <div id="logon" data-role="page" data-mini="true">
         <div data-role="header" data-position="fixed" data-tap-toggle="false">
             <h1>Login</h1>
         </div>
         <div data-role="content">
             <form id="login">
+                Nome:
+                <input type="text" id="userName" value="" />
+                Sobrenome:
+                <input type="text" id="userLastName" value="" />
+                Empresa:
+                <input type="text" id="userEmployer" value="" />
                 E-mail:
-					<input type="text" id="userName" value="jaxon.daniels@gmail.com" />
-                Password:
-					<input type="password" id="pwd" value="P2ssw0rd" />
+                <input type="text" id="userEmail" value="@" />
                 <input type="submit" class="loginBtn" value="Login" data-icon="star" data-theme="a" />
-                <input type="submit" class="loginBtn" value="LinkedIn" data-icon="star" data-theme="b" />
-                <input type="submit" class="loginBtn" value="Cadastre-se" data-icon="star" data-theme="e" />
             </form>
-
         </div>
     </div>
 
-    <!-- tripDetail page -->
-    <div id="tripDetail" data-role="page" data-add-back-btn="true">
+    <!-- disclamer page -->
+    <div id="disclamer" data-role="page">
         <div data-role="header" data-position="fixed" data-tap-toggle="false">
-            <h1>Trip Details</h1>
-            <a data-role="button" href="#home" class="ui-btn-right">Home</a>
+            <h1>Aviso</h1>
         </div>
         <div data-role="content">
-            <ul data-role="listview" id="tripDetailList" data-inset="true" data-theme="d">
-                <li class="center-wrapper" data-role="list-divider">
-                    <span id="tripDetail-title"></span>
-                </li>
-                <li>
-                    <div class="ui-grid-a">
-                        <div class="ui-block-a">Flight Number</div>
-                        <div class="ui-block-b">
-                            <span id="tripDetail-flightNum"></span>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="ui-grid-a">
-                        <div class="ui-block-a">Departure Time</div>
-                        <div class="ui-block-b">
-                            <span id="tripDetail-depart"></span>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="ui-grid-a">
-                        <div class="ui-block-a">Seat</div>
-                        <div class="ui-block-b">
-                            <span id="tripDetail-seat"></span>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-            <ul data-role="listview" id="tripDetailList-return" data-inset="true" data-theme="d">
-                <li class="center-wrapper" data-role="list-divider">
-                    <span id="tripDetail-return-title"></span>
-                </li>
-                <li>
-                    <div class="ui-grid-a">
-                        <div class="ui-block-a">Flight Number</div>
-                        <div class="ui-block-b">
-                            <span id="tripDetail-return-flightNum"></span>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="ui-grid-a">
-                        <div class="ui-block-a">Departure Time</div>
-                        <div class="ui-block-b">
-                            <span id="tripDetail-return-depart"></span>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="ui-grid-a">
-                        <div class="ui-block-a">Seat</div>
-                        <div class="ui-block-b">
-                            <span id="tripDetail-return-seat"></span>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </div>
+            <div id="disclamerContainer">
+                bla bla bla
 
-    <!--boardingPass page-->
-    <div id="boardingPass" data-role="page" data-add-back-btn="true">
-        <div data-role="header" data-position="fixed" data-tap-toggle="false">
-            <h1>Boarding Pass</h1>
-            <a data-role="button" href="#home" class="ui-btn-right">Home</a>
-        </div>
-        <div data-role="content">
-            <ul data-role="listview" id="boardingPassData" data-inset="true" data-theme="d">
-                <li class="center-wrapper" data-role="list-divider">
-                    <span id="boardingpass-cnum"></span>
-                </li>
-                <li class="center-wrapper">
-                    <div class="boardingPassCode"></div>
-                </li>
-                <li>
-                    <div class="ui-grid-a">
-                        <div class="ui-block-a">Passenger</div>
-                        <div class="ui-block-b">
-                            <span id="boardingpass-passenger"></span>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="ui-grid-a">
-                        <div class="ui-block-a">Flight</div>
-                        <div class="ui-block-b">
-                            <span id="boardingpass-flight"></span>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="ui-grid-a">
-                        <div class="ui-block-a">Departure Time</div>
-                        <div class="ui-block-b">
-                            <span id="boardingpass-depart"></span>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="ui-grid-a">
-                        <div class="ui-block-a">Gate</div>
-                        <div class="ui-block-b">
-                            <span id="boardingpass-gate"></span>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="ui-grid-a">
-                        <div class="ui-block-a">Seat</div>
-                        <div class="ui-block-b">
-                            <span id="boardingpass-seat"></span>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </div>
-
-    <!--checkIn page-->
-    <div id="checkIn" data-role="page" data-add-back-btn="true">
-        <div data-role="header" data-position="fixed" data-tap-toggle="false">
-            <h1>Check In</h1>
-            <a data-role="button" href="#home" class="ui-btn-right">Home</a>
-        </div>
-        <div data-role="content">
-            <div class="ui-grid-a">
-                <div class="ui-block-a">
-                    <ul data-role="listview" data-inset="true" data-theme="d">
-                        <li data-role="list-divider">Flight</li>
-                        <li>
-                            <span id="checkIn-flight-number"></span>
-                        </li>
-                        <li>
-                            <span id="checkIn-flight-destination"></span>
-                        </li>
-                    </ul>
-                </div>
-                <div class="ui-block-b">
-                    <ul data-role="listview" data-inset="true" data-theme="d">
-                        <li data-role="list-divider">Seat</li>
-                        <li>
-                            <span id="checkIn-seat"></span>
-                        </li>
-                        <li>
-                            <a href="#seatPicker" data-transition="slide">Change Seat</a>
-                        </li>
-                    </ul>
-                </div>
+                <a data-role="button" href="#home" data-icon="star" data-transition="slide" data-theme="a">Ok, Vamos lá!</a>
             </div>
-            <a href="#boardingPass" data-role="button">Check In</a>
+        </div>
+    </div>
+    
+    <!-- pointsDetail page -->
+    <div id="pointsDetail" data-role="page" data-add-back-btn="true">
+        <div data-role="header" data-position="fixed" data-tap-toggle="false">
+            <h1>Pontos</h1>
+            <a data-role="button" href="#home" class="ui-btn-right">Home</a>
+        </div>
+        <div data-role="content">
+            <ul data-role="listview" id="pointsDetailList" data-inset="true" data-theme="d">
+                <li class="center-wrapper" data-role="list-divider">
+                    <span id="pointsDetail-title"></span>
+                </li>
+                <li>
+                    <div class="ui-grid-a">
+                        <div class="ui-block-a">Tipo de Ponto</div>
+                        <div class="ui-block-b">
+                            <span id="pointsDetail-typepoint"></span>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="ui-grid-a">
+                        <div class="ui-block-a">Pontos</div>
+                        <div class="ui-block-b">
+                            <span id="pointsDetail-points"></span>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+            <p>Total de Pontos: <span id ="pointsDetail-totalpoints"></span></p>
         </div>
     </div>
 
-    <!--myTrips page-->
-    <div id="myTrips" data-role="page" data-add-back-btn="true">
+    <!--infoSession page-->
+    <div id="infoSession" data-role="page" data-add-back-btn="true">
         <div data-role="header" data-position="fixed" data-tap-toggle="false">
-            <h1>My Trips</h1>
+            <h1>Palestra</h1>
+            <a data-role="button" href="#home" class="ui-btn-right">Home</a>
         </div>
         <div data-role="content">
-            <ul data-role="listview" id="myTripsListView" data-inset="true" data-theme="d">
-            </ul>
+            <span id="dataAgenda"></span>
+        </div>
+    </div>
+
+    <!--agenda page-->
+    <div id="agendaPage" data-role="page" data-add-back-btn="true">
+        <div data-role="header" data-position="fixed" data-tap-toggle="false">
+            <h1>Agendamento de Visita</h1>
+            <a data-role="button" href="#home" class="ui-btn-right">Home</a>
+        </div>
+        <div data-role="content">
+        </div>
+    </div>
+
+    <!--Lulu page-->
+    <div id="luluPage" data-role="page" data-add-back-btn="true">
+        <div data-role="header" data-position="fixed" data-tap-toggle="false">
+            <h1>Lulu de Stand</h1>
+            <a data-role="button" href="#home" class="ui-btn-right">Home</a>
+        </div>
+        <div data-role="content">
         </div>
     </div>
 </body>
 </html>
 
 <script>
-    //var seatMapDrawing = new seatMapDrawing();
     var sapData = new offData(2000);
     var sapforum = new sapForumApp();
     sapforum.run();
