--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="telephonenumber.js" type="text/javascript"></script>
     <script src="scripts/airlinedata.js" type="text/javascript"></script>
     <script src="scripts/main.js" type="text/javascript"></script>
-    <script src="scripts/scancode.js" type="text/javascript"></script>
+    <!--<script src="scripts/scancode.js" type="text/javascript"></script>-->
     <script src="scripts/notification.js" type="text/javascript"></script>
     <script>
         $(function () {
@@ -81,7 +81,7 @@
             </ul>-->
         </div>
         <p><a href="#pointsDetail" class="topcoat-button" id="points" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Meus Pontos</a></p>
-        <p><a href="#" class="topcoat-button" id="scan" data-icon="star" data-role="button" data-theme="e">Marcar Pontos</a></p>
+        <p><a href="#" class="topcoat-button" id="scanQR" data-icon="star" data-role="button" data-theme="e">Marcar Pontos</a></p>
         <p><a href="#infoSession" class="topcoat-button" id="infosession" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Palestra</a></p>
         <p><a href="#agendaPage" class="topcoat-button" id="agenda" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Agende uma visita</a></p>
         <p><a href="#luluPage" class="topcoat-button" id="lulu" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Stand Lulu</a></p>
