--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <title></title>
     <meta charset="UTF-8" />
-    <link href="jquery-mobile/jquery.mobile-1.3.1.min.css" rel="stylesheet" type="text/css" />
+    <link href="jquery-mobile/jquery.mobile-1.4.0.min.css" rel="stylesheet" type="text/css" />
     <!-- uncoment viewport meta tag, if targeting Android 4.x.x devices -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-    <script src="jquery-mobile/jquery.min.js" type="text/javascript"></script>
-    <script src="jquery-mobile/jquery.mobile-1.3.1.min.js" type="text/javascript"></script>
+    <script src="jquery-mobile/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <script src="jquery-mobile/jquery.mobile-1.4.0.min.js" type="text/javascript"></script>
     <script src="cordova.js" type="text/javascript"></script>
     <script src="barcodescanner.js" type="text/javascript"></script>
     <script src="childbrowser.js" type="text/javascript"></script>
     <script src="PushNotification.js" type="text/javascript" ></script>
     <script src="telephonenumber.js" type="text/javascript"></script>
-    <script src="scripts/airlinedata.js" type="text/javascript"></script>
     <script src="scripts/main.js" type="text/javascript"></script>
     <!--<script src="scripts/scancode.js" type="text/javascript"></script>-->
     <script src="scripts/notification.js" type="text/javascript"></script>
+    <script src="scripts/airlinedata.js" type="text/javascript"></script>
     <script>
         $(function () {
             $.mobile.defaultHomeScroll = 0;
@@ -81,7 +81,8 @@
             </ul>-->
         </div>
         <p><a href="#pointsDetail" class="topcoat-button" id="points" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Meus Pontos</a></p>
-        <p><a href="#" class="topcoat-button" id="scanQR" data-icon="star" data-role="button" data-theme="e">Marcar Pontos</a></p>
+        <!--<p><a href="#" class="topcoat-button" id="scanQR" data-role="button" data-icon="star" data-theme="e">Marcar Pontos</a></p>-->
+        <p><button id="scanQR" class="ui-btn ui-icon-star ui-btn-icon-left">Marcar Pontos</button></p>
         <p><a href="#infoSession" class="topcoat-button" id="infosession" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Palestra</a></p>
         <p><a href="#agendaPage" class="topcoat-button" id="agenda" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Agende uma visita</a></p>
         <p><a href="#luluPage" class="topcoat-button" id="lulu" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Stand Lulu</a></p>
