ajustes para o AWS

--- a/index.html
+++ b/index.html
@@ -170,6 +170,18 @@
             <a data-role="button" href="#home" class="ui-btn-right">Home</a>
         </div>
         <div data-role="content">
+
+            <p><a href="#lulurankPage" class="topcoat-button" id="lulu" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Ranking</a></p>
+        </div>
+    </div>
+
+    <!--Lulu Rank page-->
+    <div id="lulurankPage" data-role="page" data-add-back-btn="true">
+        <div data-role="header" data-position="fixed" data-tap-toggle="false">
+            <h1>Ranking dos Stands</h1>
+            <a data-role="button" href="#home" class="ui-btn-right">Home</a>
+        </div>
+        <div data-role="content">
         </div>
     </div>
 </body>
