--- a/index.html
+++ b/index.html
@@ -195,10 +195,20 @@
     //appNotify.initialize();    
 
     function initNotification() {
-        document.addEventListener("deviceready", initPushwoosh, true);
+        var pushNotification = window.plugins.pushNotification;
+        document.addEventListener("deviceready", initPushwooshAndroid, true);
+        //if (device.platform == "Android") {
+        //    document.addEventListener("deviceready", initPushwooshAndroid, true);
+        //    pushNotification.onDeviceReady();
+        //}
+
+        //if (device.platform == "iPhone" || device.platform == "iOS") {
+        //    document.addEventListener("deviceready", initPushwooshIOS, true);
+        //    pushNotification.onDeviceReady();
+        //}        
     }
 
-    function initPushwoosh() {
+    function initPushwooshAndroid() {
         var pushNotification = window.plugins.pushNotification;
         pushNotification.onDeviceReady();
 
@@ -221,6 +231,30 @@
             }
 
             navigator.notification.alert(title);
+        });
+    }
+
+    function initPushwooshIOS() {
+        var pushNotification = window.plugins.pushNotification;
+        pushNotification.onDeviceReady();
+
+        pushNotification.registerDevice({ alert: true, badge: true, sound: true, pw_appid: "F4C02-5215F", appname: "SAPForum" },
+            function (status) {
+                var deviceToken = status['deviceToken'];
+                alert('registerDevice: ' + deviceToken);
+            },
+            function (status) {
+                alert('failed to register : ' + JSON.stringify(status));
+                navigator.notification.alert(JSON.stringify(['failed to register ', status]));
+            }
+        );
+
+        pushNotification.setApplicationIconBadgeNumber(0);
+
+        document.addEventListener('push-notification', function (event) {
+            var notification = event.notification;
+            navigator.notification.alert(notification.aps.alert);
+            pushNotification.setApplicationIconBadgeNumber(0);
         });
     }
 </script>
