--- a/index.html
+++ b/index.html
@@ -162,7 +162,12 @@
             <a data-role="button" href="#home" class="ui-btn-right">Home</a>
         </div>
         <div data-role="content">
-
+            <div class="ui-field-contain">
+                <label for="standLulu">Stand:</label>
+                <select name="standLulu" id="standLuluCombo">
+                    <option value="0">Selecione...</option>
+                </select>
+            </div>
             <p><a href="#lulurankPage" class="topcoat-button" id="lulu" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Ranking</a></p>
         </div>
     </div>
