--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         pushNotification.registerDevice({ projectid: "683239994824", appid: "F4C02-5215F" },
             function (status) {
                 var pushToken = status;
-                alert('push token: ' + pushToken);
+                //alert('push token: ' + pushToken);
             },
             function (status) {
                 alert(JSON.stringify(['failed to register ', status]));
