--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
             <a data-role="button" href="#home" class="ui-btn-right">Home</a>
         </div>
         <div data-role="content">
+            <ul data-role="listview" id="myRankListView" data-inset="true" data-theme="d"></ul>
         </div>
     </div>
 </body>
