--- a/index.html
+++ b/index.html
@@ -170,22 +170,22 @@
             </div>
             <div class="ui-field-contain">
                 <label>
-                    <input type="checkbox" name="question1">Question 1
+                    <input type="checkbox" id="question1" name="question1">Question 1
                 </label>
                 <label>
-                    <input type="checkbox" name="question2">Question 2
+                    <input type="checkbox" id="question2" name="question2">Question 2
                 </label>
                 <label>
-                    <input type="checkbox" name="question3">Question 3
+                    <input type="checkbox" id="question3" name="question3">Question 3
                 </label>
                 <label>
-                    <input type="checkbox" name="question4">Question 4
+                    <input type="checkbox" id="question4" name="question4">Question 4
                 </label>
                 <label>
-                    <input type="checkbox" name="question5">Question 5
+                    <input type="checkbox" id="question5" name="question5">Question 5
                 </label>
                 <label>
-                    <input type="checkbox" name="question6">Question 6
+                    <input type="checkbox" id="question6" name="question6">Question 6
                 </label>
             </div>
             <p><a href="#" class="topcoat-button" id="savelulu" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Salvar</a></p>
