--- a/index.html
+++ b/index.html
@@ -46,12 +46,7 @@
             <div class="info-wrapper-right">
                 <div class="info">
                     <div class="info-data" id="labelpointsTotal"></div>
-                    <div class="info-label" for="labelpointsTotal">Pontos:</div>
-                    <div class="clear"></div>
-                </div>
-                <div class="info">
-                    <div class="info-data" id="bestStand"></div>
-                    <div class="info-label" for="bestStand">Melhor Stand:</div>
+                    <div class="info-label" for="labelpointsTotal">Meus Pontos:</div>
                     <div class="clear"></div>
                 </div>
             </div>
