Ajuste de Logos

--- a/index.html
+++ b/index.html
@@ -110,17 +110,33 @@
                 </li>
                 <li>
                     <div class="ui-grid-a">
-                        <div class="ui-block-a">Tipo de Ponto</div>
+                        <div class="ui-block-a">Cadastro</div>
                         <div class="ui-block-b">
-                            <span id="pointsDetail-typepoint"></span>
+                            <span id="pointsDetail-cadastro"></span>
                         </div>
                     </div>
                 </li>
                 <li>
                     <div class="ui-grid-a">
-                        <div class="ui-block-a">Pontos</div>
+                        <div class="ui-block-a">Agendamento de Visita</div>
                         <div class="ui-block-b">
-                            <span id="pointsDetail-points"></span>
+                            <span id="pointsDetail-agenda"></span>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="ui-grid-a">
+                        <div class="ui-block-a">Palestra</div>
+                        <div class="ui-block-b">
+                            <span id="pointsDetail-infosession"></span>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="ui-grid-a">
+                        <div class="ui-block-a">Visita no Stand</div>
+                        <div class="ui-block-b">
+                            <span id="pointsDetail-stand"></span>
                         </div>
                     </div>
                 </li>
