--- a/index.html
+++ b/index.html
@@ -97,10 +97,12 @@
                 <input type="text" id="lastname" value="" />
                 Empresa:
                 <input type="text" id="employer" value="" />
+                E-mail:
+                <input type="text" id="email" value="@" />
                 Cargo:
-                <input type="text" id="position" value="@" />
+                <input type="text" id="position" value="" />
                 City:
-                <input type="text" id="city" value="@" />
+                <input type="text" id="city" value="" />
                 State:
                 <select id="state">
                     <option value="AC">Acre</option>
