--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <p><a href="#infoSession" class="topcoat-button" id="infosession" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Palestra</a></p>
             <p><a href="#agendaPage" class="topcoat-button" id="agenda" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Agende uma visita</a></p>
             <p><a href="#luluPage" class="topcoat-button" id="lulu" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Stand Lulu</a></p>
-            <p><a href="#fulldata" class="topcoat-button" id="lulu" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Cadastro Completo</a></p>
+            <p><a href="#fulldata" class="topcoat-button" id="fulldata" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Cadastro Completo</a></p>
             <p id="info"></p>
         </div>
     </div>
@@ -85,20 +85,20 @@
     </div>
 
     <!-- FULL Data page -->
-    <div id="fulldata" data-role="page" data-mini="true">
+    <div id="fulldataPage" data-role="page" data-mini="true">
         <div data-role="header" data-position="fixed" data-tap-toggle="false">
             <h1>Cadastro Completo</h1>
         </div>
         <div data-role="content">
             <form id="fulldataform">
                 Nome:
-                <input type="text" id="firstname" value="" />
+                <input type="text" id="tfirstname" value="" />
                 Sobrenome:
-                <input type="text" id="lastname" value="" />
+                <input type="text" id="tlastname" value="" />
                 Empresa:
-                <input type="text" id="employer" value="" />
+                <input type="text" id="temployer" value="" />
                 E-mail:
-                <input type="text" id="email" value="@" />
+                <input type="text" id="temail" value="@" />
                 Cargo:
                 <input type="text" id="position" value="" />
                 City:
